Fix build for jdk17